particles header correct align

--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -106,27 +106,23 @@ a {
   }
 }
 
-
-
-
 .page-header {
 	overflow: hidden;
-  color: $header-heading-color;
   text-align: center;
   // background-color: $header-bg-color;
   background-color: black;
   // background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
 
   @include large {
-    padding: 5rem 6rem;
+    padding: 5rem 0rem;
   }
 
   @include medium {
-    padding: 3rem 4rem;
+    padding: 3rem 0rem;
   }
 
   @include small {
-    padding: 2rem 1rem;
+    padding: 2rem 0rem;
   }
 }
 
@@ -139,9 +135,11 @@ a {
 }
 
 .project-tagline {
-  margin-bottom: 2rem;
-  font-weight: normal;
-  opacity: 0.7;
+	margin: 0 auto;
+	margin-bottom: 1rem;
+	font-weight: normal;
+	opacity: 0.7;
+	max-width: 60ch;
 
   @include large {
     font-size: 1.25rem;
@@ -258,20 +256,6 @@ $time-4: 1200s;
   from { transform: translateY(0px); }
   to   { transform: translateY($spacing * -1); }
 }
-
-.container {
-	position: absolute;
-	top: 0;
-	left: 0;
-    width: 100%;
-	height: 100%;
-	min-width: 100%;
-	min-height: 100%;
-	z-index: -1;
-	object-position: center;
-	object-fit: cover;
-}
-
 
 .main-content {
   word-wrap: break-word;
